--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
       <meta name="description" content="SoftBahi provides custom software solutions to help businesses achieve their goals. Our team of experts works closely with each client to deliver high-quality software that is tailored to their specific needs.">
       <link href="css/style.css" rel="stylesheet" type="text/css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/css-layout/1.1.1/css-layout.min.js">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
   </head>
   <body>
     <header>
-      <a href="#" class="logo">SoftBahi</a>
+      <a href="" class="logo"><img src="images/favicon.ico" width="40" height="40"></a>
+      <!-- <a href="#" class="logo">SoftBahi</a> -->
       <ul>
         <li> <a href="#" class="active">Home</a></li>
         <li> <a href="https://www.softbahi.xyz/about.html">About</a></li>
@@ -28,7 +27,7 @@
     </header>
   <section>
     <h2 id="text">Welcome To SoftBahi</h2>
-    <h3 id="text2">Let's Make Your Life Easy!</h3>
+    <h2 id="text2">Let's Make Your Life Easy!</h2>
     <button type="button" class="btn btn-outline-success" id="btn">MORE</button>
   </section>
   <footer>
@@ -39,7 +38,6 @@
       <a href="https://www.instagram.com/apurboislam69/" class="instagram"><i class="fab fa-instagram"></i></a>
     </div>
   </footer>
-  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
